LIN-2366/LIN-2761 :: Fix unnecessary gap in form section

--- a/vaadin23/application-framework/src/main/resources/META-INF/resources/frontend/styles/linkki-vaadin-field-styles.css
+++ b/vaadin23/application-framework/src/main/resources/META-INF/resources/frontend/styles/linkki-vaadin-field-styles.css
@@ -17,3 +17,7 @@
 :host([disabled][readonly]) [part="input-field"] {
   background: transparent;
 }
+
+:host([has-label]) {
+    padding-top: 0;
+}
