--- a/vaadin23/core/src/main/resources/META-INF/resources/frontend/styles/linkki-section.css
+++ b/vaadin23/core/src/main/resources/META-INF/resources/frontend/styles/linkki-section.css
@@ -1,3 +1,6 @@
+linkki-section {
+  --section-item-width: calc((100% - (var(--columns, 1) - 1) * var(--linkki-section-gap)) / var(--columns, 1));
+}
 linkki-section > div[slot="content"] > * {
-  max-width: var(--section-item-width, 100%);
+  max-width: var(--section-item-width);
 }
